[tool.poetry]
name = "tetrisrl"
version = "0.1.0"
description = ""
authors = ["Jay Butera"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "7.1.1"
gym = "0.17.1"
numpy = "1.24.3"
seaborn = "0.10.0"
tensorboard = "2.1.0"
torch = "2.0.1"
torchvision = "0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
